--- a/KYappUtility/Assembly-CSharp.csproj
+++ b/KYappUtility/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Assets/StandardUtility.cs" />
     <Compile Include="Assets/FastNoiseLite.cs" />
     <Compile Include="Assets/SaveLoadUtility.cs" />
+    <Compile Include="Assets/KYAPPrefab.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
