--- a/Assets/KYappUtility/package.json
+++ b/Assets/KYappUtility/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.kyapp.utility",
+  "name": "jp.kyapp.utility",
   "version": "1.0.2",
   "displayName": "KYappUtility",
   "description": "キャップのユーティリティパッケージ",
